# black-scholes-comparison

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Procfile  README.md  coverage_results.txt  coverage_results_final.txt  coverage_results_final_v2.txt  coverage_results_final_v3.txt  coverage_results_v2.txt  coverage_results_v3.txt  coverage_results_v4.txt  final_coverage_report.txt  final_coverage_report_v2.txt  final_integration_report.txt  final_integration_report_v2.txt  final_quality_gate_report.txt  live_scraper_results.txt  pyproject.toml  railway.json  requirements.txt  test_db.py
.gemini/antigravity/: implementation_plan.md
.github/workflows/: ci.yml  deploy.yml  scraper.yml
apps/api/: .dockerignore  .env.dev  .env.example  .env.host  .flake8  Dockerfile  Procfile  coverage.txt  coverage_final.txt  coverage_full.txt  coverage_output.txt  coverage_output_2.txt  coverage_report.txt  debug_cookies.json  debug_ls.json  docker-compose.override.yml  docker-compose.yml  download_test_debug.txt  err.txt  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  scratch_acceptance.py  test_output.txt  test_output_2.txt  test_output_3.txt
apps/api/.gemini/antigravity/scratch/: setup_db_realtime.py
apps/api/config/prometheus/: prometheus.yml
apps/api/grafana/dashboards/: api_performance.json  scrapers.json
apps/api/grafana/grafana/dashboards/: pricing_methods.json  research_overview.json
apps/api/grafana/grafana/provisioning/dashboards/: dashboards.yml
apps/api/grafana/grafana/provisioning/datasources/: prometheus.yml
apps/api/nginx/: nginx.conf
apps/api/nginx/ssl/: self-signed.crt
apps/api/prometheus/: prometheus.yml
apps/api/scratch/: check_db.py  check_iv.py  check_users.py  cleanup_broken_annotations.py  create_test_user.py  debug_405.py  debug_login.py  debug_login_v2.py  fix_test_annotations.py  fix_test_annotations_v2.py  get_token.py  integration_output.txt  run_integration_tests.sh  test_auth.py  test_backend.py  test_compression.py  wrap_tests.py
apps/api/scripts/: collect.py  deployment_check.py  register_minio_cluster.py  run_experiments.py  validate_infra.py  verify_gate.py
apps/api/src/: config.py  exceptions.py  logging_config.py  main.py  metrics.py
apps/api/src/analysis/: convergence.py  statistics.py
apps/api/src/auth/: dependencies.py  oauth.py
apps/api/src/cache/: compressed_cache.py  decorators.py  redis_client.py
apps/api/src/data/: pipeline.py  transformers.py  validators.py
apps/api/src/database/: repository.py  supabase_client.py
apps/api/src/methods/: __init__.py  analytical.py  base.py  finite_difference.py  monte_carlo.py  trees.py
apps/api/src/methods/finite_difference/: __init__.py  crank_nicolson.py  explicit.py  implicit.py
apps/api/src/methods/monte_carlo/: __init__.py  antithetic.py  control_variates.py  quasi_mc.py  standard.py
apps/api/src/methods/tree_methods/: __init__.py  binomial_crr.py  richardson.py  trinomial.py
apps/api/src/notifications/: email.py  hierarchy.py  push.py
apps/api/src/queue/: consumer.py  publisher.py  rabbitmq_client.py
apps/api/src/routers/: analytics.py  debug.py  downloads.py  experiments.py  health.py  market_data.py  notifications.py  pricing.py  scrapers.py  websocket.py
apps/api/src/scrapers/: base_scraper.py  nse_next_scraper.py  nse_scraper.py  scraper_factory.py  spy_scraper.py
apps/api/src/scripts/: run_experiments.py
apps/api/src/storage/: minio_client.py  storage_service.py
apps/api/src/task_queues/: consumer.py  publisher.py  rabbitmq_client.py
apps/api/src/utils/: compression.py
apps/api/src/websocket/: channels.py  manager.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: conftest.py  test_api_smoke.py  test_auth.py  test_dashboard.py  test_download.py  test_metrics.py  test_realtime.py  test_scrapers.py  test_validation.py
apps/api/tests/integration/: test_cache_integration.py  test_compression.py  test_gaps_refactored.py  test_infra_integration.py  test_notifications_integration.py  test_pipeline.py  test_pipeline_integration.py  test_pipeline_manual.py  test_pricing_api.py  test_pricing_integration.py  test_queue_integration.py  test_repository.py  test_routers.py  test_scrapers.py  test_scrapers_extended.py  test_scrapers_live.py  test_storage_compression.py  test_storage_integration.py  test_websocket.py  test_websocket_manager.py
apps/api/tests/performance/: load_test.py
apps/api/tests/unit/: test_all_methods.py  test_all_routers.py  test_analysis.py  test_analysis_final.py  test_analytical.py  test_api.py  test_auth.py  test_backend_final_coverage.py  test_cache.py  test_compression.py  test_consumer.py  test_consumer_final.py  test_convergence.py  test_convergence_extra.py  test_coverage_final.py  test_coverage_gap.py  test_downloads_final.py  test_downloads_router.py  test_experiments_router_coverage.py  test_final_gaps.py  test_infra_unit.py  test_infrastructure.py  test_logging_config.py  test_main.py  test_main_coverage.py  test_methods.py  test_methods_coverage.py  test_methods_edge.py  test_methods_final.py  test_minio_client.py  test_missing_coverage.py  test_modules_v4.py  test_notifications.py  test_notifications_extended.py  test_notifications_router_coverage.py  test_nse_scraper_coverage.py  test_oauth_final.py  test_pipeline.py  test_pricing_router.py  test_pricing_router_coverage.py  (+26 more)
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  railway.json  vitest.config.ts
apps/web/__tests__/: PricerForm.test.tsx  Select.test.tsx
apps/web/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
apps/web/hooks/: useApi.ts  useAuth.ts  useDownload.ts  useExperiments.ts  useHealth.ts  useMarketData.ts  useNotifications.ts  usePricer.ts  useRealtime.ts  useWebSocket.ts
apps/web/lib/: api.ts  utils.test.ts  utils.ts
apps/web/scripts/: deployment-check.mjs
apps/web/src/: middleware.ts
apps/web/types/: index.ts
scratch/: check_db_counts.py  trigger_scraper.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql
(+72 files in other folders)
