[project]
name = "black-scholes-comparison"
version = "4.0.0"
description = "Production-grade full-stack options pricing research system."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
]

[tool.mypy]

python_version   = "3.11"
strict           = true
warn_return_any  = true
warn_unused_configs = true
disallow_untyped_defs  = true
disallow_any_generics  = true
no_implicit_optional   = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pandas.*",
    "playwright.*",
    "resend.*",
    "matplotlib.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]
