[project]
name = "black-scholes-api"
version = "1.0.0"
description = "Numerical methods for option pricing — MATH499"
authors = [{ name = "Joseph Kamau Maina", email = "SJOSKA2211@users.noreply.github.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.4.0",
    "structlog>=24.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "resend>=0.8.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "playwright>=1.44.0",
    "joblib>=1.4.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "statsmodels>=0.14.0",
    "redis>=5.0.0",
    "aio-pika>=9.4.0",
    "minio>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
