[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name    = "black-scholes-api"
version = "1.0.0"
requires-python = ">=3.11"
description = "Numerical methods for option pricing — MATH499"
authors = [{ name = "Joseph Kamau Maina", email = "SJOSKA2211@users.noreply.github.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.4.0",
    "structlog>=24.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "resend>=0.8.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "playwright>=1.44.0",
    "joblib>=1.4.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "statsmodels>=0.14.0",
    "redis>=5.0.0",
    "aio-pika>=9.4.0",
    "minio>=7.2.0",
    "xlsxwriter>=3.2.0",
]

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.isort]
profile     = "black"
line_length = 100

[tool.ruff]
line-length    = 100
target-version = "py311"
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "S",   # flake8-bandit (security)
  "ANN", # flake8-annotations (type hints)
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific rules
]
ignore = ["S101","B008","TCH003","TCH002","TCH001","ANN101","ANN102"]  # allow assert in tests, Depends in routes, datetime in runtime

[tool.mypy]
python_version   = "3.11"
strict           = true
exclude          = "scratch/"
warn_return_any  = true
warn_unused_configs = true
disallow_untyped_defs  = true
disallow_any_generics  = true
no_implicit_optional   = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pandas.*",
    "playwright.*",
    "resend.*",
    "matplotlib.*",
    "structlog.*",
    "httpx.*",
    "pydantic_settings.*",
    "yaml.*",
    "pygments.*",
    "aiormq.*",
    "aio_pika.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--strict-markers --tb=short -v"
markers = [
  "unit: pure unit tests — no network, no DB",
  "integration: tests against real Supabase, Redis, RabbitMQ, MinIO",
  "e2e: Playwright browser tests against running stack",
  "redis: tests requiring a running Redis instance",
  "rabbitmq: tests requiring a running RabbitMQ instance",
  "minio: tests requiring a running MinIO instance",
]

[tool.coverage.run]
source        = ["src"]
omit          = ["tests/*","scripts/*"]
branch        = true

[tool.coverage.report]
fail_under    = 100
show_missing  = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
